Updated synchronized method visitor instrumentation