@@ -1,15 +1,18 @@
 package org.mpi_sws.jmc.agent.test;
 
+import org.mpi_sws.jmc.agent.visitors.JmcVisitor;
 import org.objectweb.asm.ClassReader;
 import org.objectweb.asm.ClassVisitor;
 import org.objectweb.asm.ClassWriter;
 import org.objectweb.asm.util.Textifier;
 import org.objectweb.asm.util.TraceClassVisitor;
 
+import java.io.File;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class AgentTestUtil {
 
@@ -65,16 +68,20 @@ public class AgentTestUtil {
      * CAUTION! Should be used to record the correct transformation of a class file. Not to be used
      * in any active test path, but to be used to build the test database.
      */
-    public static void translateAndStore(
-            String sourceClassPath, String targetClassPath, ClassVisitorFactory classVisitorFactory)
+    public static void translateAndStore(String sourceClassPath, String targetClassPath)
             throws Exception {
-        ClassReader cr = new ClassReader(Files.readAllBytes(Path.of(sourceClassPath)));
-        ClassWriter cw = new ClassWriter(ClassWriter.COMPUTE_MAXS);
+        byte[] transformed = JmcVisitor.transform(Files.readAllBytes(Path.of(sourceClassPath)));
+        record(targetClassPath, transformed);
+    }
 
-        ClassVisitor cv = classVisitorFactory.create(cw);
-        cr.accept(cv, 0);
-
-        byte[] transformed = cw.toByteArray();
-        Files.write(Path.of(targetClassPath), transformed);
+    private static void record(String outPath, byte[] classFileBuffer) {
+        try {
+            Path p = Paths.get(outPath);
+            File outFile = new File(p.toString());
+            outFile.getParentFile().mkdirs();
+            Files.write(outFile.toPath(), classFileBuffer);
+        } catch (Exception e) {
+            System.err.println("Error writing to file: " + outPath + " " + e);
+        }
     }
 }
